--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "@types/node": "20.12.2",
+    "@types/react": "18.2.73",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.4.3"
   }
 }
