--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "app/post/page.jsx"  ],
+, "app/posts/page.jsx"  ],
   "exclude": [
     "node_modules"
   ]
