--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "next": "14.1.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
+    "oauth-1.0a": "^2.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
